--- a/src/components/ui/Spinner/spinner.css
+++ b/src/components/ui/Spinner/spinner.css
@@ -8,9 +8,6 @@
     font-size: 10px;
     position: relative;
     text-indent: -9999em;
-    border-top: solid rgba(0,0,0, 0.05);
-    border-right: solid rgba(0,0,0, 0.05);
-    border-bottom: solid rgba(0,0,0, 0.05);
     -webkit-transform: translateZ(0);
     -ms-transform: translateZ(0);
     transform: translateZ(0);
